[package]
name = "otree"
version = "0.3.1"
edition = "2021"
build = "build.rs"
license = "MIT"
authors = ["fioncat"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/fioncat/otree"
description = "A command line tool to view objects (json/yaml/toml) in TUI tree widget"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["use-dev-tty"] }
dirs = "6.0"
humansize = "2.1"
once_cell = "1.20"
paste = "1.0"
ratatui = "0.29"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yml = "0.0"
toml = { version = "0.8", features = ["preserve_order"] }
tui-tree-widget = "0.23"

[build-dependencies]
simple-error = "0.3"
vergen = { version = "9.0", features = ["build", "rustc", "cargo", "si"] }

[profile.release]
lto = true
strip = true
incremental = false
