[package]
name = "otree"
version = "0.5.1"
edition = "2021"
build = "build.rs"
license = "MIT"
authors = ["fioncat"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/fioncat/otree"
description = "A command line tool to view objects (json/yaml/toml) in TUI tree widget"

[dependencies]
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
crossterm = { version = "^0", features = ["use-dev-tty"] }
dirs = "^6"
tui-textarea = "^0"
humansize = "^2"
notify = "^8"
once_cell = "^1"
paste = "^1"
ratatui = "^0"
regex = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["preserve_order"] }
serde_yml = "^0"
toml = { version = "^0", features = ["preserve_order"] }
tui-tree-widget = { git = "https://github.com/fioncat/tui-rs-tree-widget", branch = "main" }

[build-dependencies]
simple-error = "^0"
vergen = { version = "^9", features = ["build", "rustc", "cargo", "si"] }

[profile.release]
lto = true
strip = true
incremental = false
