[package]
name = "otree"
version = "0.5.2"
edition = "2021"
build = "build.rs"
license = "MIT"
authors = ["fioncat"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/fioncat/otree"
description = "A command line tool to view objects (json/yaml/toml) in TUI tree widget"

[dependencies]
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
crossterm = { version = "^0", features = ["use-dev-tty"] }
dirs = "^6"
humansize = "^2"
notify = "^8"
paste = "^1"
quick-xml = { version = "^0", features = ["serialize"] }
ratatui = "^0"
regex = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["preserve_order"] }
serde_yml = "^0"
toml = { version = "^0", features = ["preserve_order"] }
tui-textarea = "^0"
tui-tree-widget = { git = "https://github.com/fioncat/tui-rs-tree-widget", branch = "main" }

[build-dependencies]
simple-error = "^0"
vergen = { version = "^9", features = ["build", "rustc", "cargo", "si"] }

[profile.release]
lto = true
strip = true
incremental = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
single_match_else = "allow" # match-ing Options is visually cleaner
inefficient_to_string = "allow" # makes type conversion less obvious for little benefit
too_many_lines = "allow" # necessary evil for now
